kube/envoy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: dwoodworth414/jace:envoy-8379dc42b81b4ddab6d3198c57e4b67ef0e9749a
        ports:
        - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: LoadBalancer
