kube/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: dwoodworth414/jace:frontend-32cadb5ffb066f23378443ad3c3247cc5f2e4b4f
        command: ["ng", "serve", "--prod", "--disable-host-check", "--host", "0.0.0.0"]
        ports:
        - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
  type: LoadBalancer
